# ghc-crash-reproducer

./: .hgignore  CAPI.hs  Invocation.hs  TH.hs  benchmark-analysis.cabal  cabal.project  cabal.project.freeze  reproducer.cabal
cbits/: sqlite-functions.h
src/: SQLiteExts.hs
src/Schema/: Dataset.hs  Graph.hs  Utils.hs
src/Schema/Utils/: TH.hs
src/Sql/: Core.hs
