Cabal-Version:       2.2
Name:                benchmark-analysis
Version:             0.9.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2017-2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Extra-Source-Files:     cbits/*.h

Library
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
  GHC-Prof-Options:     -fprof-auto

  Hs-Source-Dirs:       src
  Exposed-Modules:      

  Other-Modules:        Schema.Dataset
                        Schema.Graph
                        Schema.Graph.V0
                        Schema.Graph.V1
                        Schema.Utils
                        Schema.Utils.TH
                        Sql.Core
                        SQLiteExts

  C-Sources:            cbits/check_unique.c
                        cbits/count_transitions.c
                        cbits/key_value_vector.c
                        cbits/min_key.c
                        cbits/misc.c
                        cbits/pcg_basic.c
                        cbits/random_sample.c
                        cbits/random_fun.c

  CC-Options:           -Wall -Wextra -pedantic -std=c11 -g -O3 -DSQLITE_CORE
  Include-Dirs:         cbits
  Includes:             sqlite-functions.h

  Other-Extensions:     CApiFFI
                        ConstraintKinds
                        DerivingStrategies
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        MultiParamTypeClasses
                        OverloadedStrings
                        QuasiQuotes
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        TemplateHaskell
                        TypeFamilies
                        UndecidableInstances
                        ViewPatterns

  Build-Depends:        base
               ,        bytestring ^>= 0.10.8
               ,        containers >= 0.5.11 && < 0.7
               ,        exceptions ^>= 0.10.0
               ,        interpolate ^>= 0.2.0
               ,        monad-logger ^>= 0.3.28
               ,        mtl ^>= 2.2.1
               ,        persistent ^>= 2.14.3
               ,        persistent-sqlite ^>= 2.13.1
               ,        resourcet ^>= 1.2.0
               ,        resource-pool ^>= 0.2.3.2
               ,        text ^>= 1.2.3.2
               ,        template-haskell ^>= 2.16.0.0
               ,        time ^>= 1.9
               ,        unliftio-core ^>= 0.2.0.1

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
