Cabal-Version:       2.2
Name:                reproducer
Version:             0.9.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2017-2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Extra-Source-Files:     cbits/*.h

Library
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
  GHC-Prof-Options:     -fprof-auto

  Hs-Source-Dirs:       .
  Exposed-Modules:      

  Other-Modules:        CAPI
                        Invocation
                        TH

  C-Sources:            cbits/random_fun.c

  CC-Options:           -Wall -Wextra -pedantic -std=c11 -g -O3 -DSQLITE_CORE
  Include-Dirs:         cbits
  Includes:             sqlite-functions.h

  Other-Extensions:     CApiFFI
                        DerivingStrategies
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MultiParamTypeClasses
                        OverloadedStrings
                        QuasiQuotes
                        RankNTypes
                        StandaloneDeriving
                        TemplateHaskell
                        TypeFamilies
                        UndecidableInstances

  Build-Depends:        base
               ,        persistent ^>= 2.14.3
               ,        persistent-sqlite ^>= 2.13.1
               ,        text ^>= 1.2.3.2
               ,        template-haskell ^>= 2.16.0.0

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
